[project]
name = "vehicle-frequency-radar"
version = "0.1.0"
description = "MVP radar for counting target vehicle model mentions on public listing pages."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
  "urllib3<2",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44.0"]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
